force-app/main/default/objects/AM_Customer_Enquiry__c/AM_Customer_Enquiry__c.object-meta.xml
<CustomObject>
    <label>AM Customer Enquiry</label>
    <nameField>
        <displayFormat>AMCN-{0000}</displayFormat>
        <label>AM Customer Enquiry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Customer Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>