force-app/main/default/objects/AM_Customer_Enquiry__c/fields/AM_Customer__c.field-meta.xml
<CustomField>
    <fullName>AM_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AM Customer Enquiries</relationshipLabel>
    <relationshipName>AM_Customer_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>