force-app/main/default/objects/AM_Customer_Enquiry__c/fields/AM_Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>AM_Customer_Phone__c</fullName>
    <formula>AM_Customer__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Customer Phone</label>
    <type>Text</type>
</CustomField>