force-app/main/default/objects/AM_Customer_Enquiry__c/fields/AM_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Fuel_Type__c</fullName>
    <label>AM Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Petrol</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>