force-app/main/default/objects/AM_Customer_Enquiry__c/fields/AM_Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Transmission_Type__c</fullName>
    <label>AM Transmission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>IMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>