force-app/main/default/objects/AM_Customer_Enquiry__c/fields/AM_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Vehicle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>AM Customer Enquiries</relationshipLabel>
    <relationshipName>AM_Customer_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>