force-app/main/default/objects/AM_Customer_Enquiry__c/fields/AM_Vehicle_Capacity__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Capacity__c</fullName>
    <formula>TEXT(  AM_Vehicle__r.AM_Vehicle_Capacity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Capacity</label>
    <type>Text</type>
</CustomField>