force-app/main/default/objects/AM_Customer_Enquiry__c/fields/AM_Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Color__c</fullName>
    <label>AM Vehicle Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Beige</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Violet</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Maroon</fullName>
            </value>
            <value>
                <fullName>gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>