force-app/main/default/objects/AM_Customer_Enquiry__c/fields/KMS_Travelled__c.field-meta.xml
<CustomField>
    <fullName>KMS_Travelled__c</fullName>
    <label>KMS Travelled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1000</fullName>
            </value>
            <value>
                <fullName>1001-5000</fullName>
            </value>
            <value>
                <fullName>5001-10000</fullName>
            </value>
            <value>
                <fullName>10001-20000</fullName>
            </value>
            <value>
                <fullName>20001-25000</fullName>
            </value>
            <value>
                <fullName>25001-30000</fullName>
            </value>
            <value>
                <fullName>30001-35000</fullName>
            </value>
            <value>
                <fullName>35001-40000</fullName>
            </value>
            <value>
                <fullName>40001-45000</fullName>
            </value>
            <value>
                <fullName>45001-50000</fullName>
            </value>
            <value>
                <fullName>50001-55000</fullName>
            </value>
            <value>
                <fullName>55001-60000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>