force-app/main/default/objects/AM_Customer_Enquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AM_Vehicle__c</columns>
    <columns>AM_Brand__c</columns>
    <columns>AM_Customer_Enquiry_Status__c</columns>
    <columns>AM_Customer__c</columns>
    <columns>AM_Customer_Name__c</columns>
    <columns>AM_Make_Year__c</columns>
    <columns>AM_Customer_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>